Update 'tyz2139vx-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:cb10f3663d1e53e1b70a0186c9dd8f192477904b@sha256:6c0a13cc5cff9ad075ad53183ab1bdc147a2834c235e95500abc095159e15f9f

--- a/components/tyz2139vx-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/tyz2139vx-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: tyz2139vx-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:cb10f3663d1e53e1b70a0186c9dd8f192477904b@sha256:6c0a13cc5cff9ad075ad53183ab1bdc147a2834c235e95500abc095159e15f9f
+          name: container-image
